syntax = "proto3";

package gen.livemap;
option go_package = "github.com/galexrt/arpanet/gen/livemap";

service LivemapService {
    rpc Stream(StreamRequest) returns (stream StreamResponse) {}
}

message StreamRequest {
}

message StreamResponse {
    repeated Marker dispatches = 1;
    repeated Marker users = 2;
}

message Marker {
    float x = 1;
    float y = 2;

    string id = 3;
    string name = 4;

    string icon = 5;
    string popup = 6;
}
