syntax = "proto3";

package services.livemap;
option go_package = "github.com/galexrt/arpanet/proto/services/livemap;livemap";

import "resources/timestamp/timestamp.proto";

message StreamRequest {
}

message ServerStreamResponse {
    repeated Marker users = 1;
    repeated Marker dispatches = 2;
}

message Marker {
    int32 userID = 1; // @gotags: sql:"primary_key" alias:"user_id"
    string job = 2; // @gotags: alias:"job"

    float x = 3; // @gotags: alias:"x"
    float y = 4; // @gotags: alias:"y"

    resources.timestamp.Timestamp updatedAt = 5; // @gotags: alias:"updated_at"

    string name = 6;
    string icon = 7;
    string popup = 8;
    string link = 9;
}

service LivemapService {
    rpc Stream(StreamRequest) returns (stream ServerStreamResponse);
}
